Fixed Logo Overlap, fixed Contact Form Customizer Bug - Public Release 1.2.2

--- a/changelog.txt
+++ b/changelog.txt
@@ -108,3 +108,8 @@ Version 1.2.1
 
 	i) Improved Slider Functionality
 	ii) Added ShareASale ID and WPForms notification
+
+Version 1.2.2
+
+	i) Fixed Logo Overlap issue
+	ii) Fixed Contact Form Customizer Bugs
